--- a/xpets/res/values/strings.xml
+++ b/xpets/res/values/strings.xml
@@ -5,20 +5,17 @@
     <string name="action_settings">Settings</string>
     <string name="item_image_desc">pet image</string>
     <string name="logo">Logo</string>
-
-    <string name="latest">最新</string>
-    <string name="recommend">推荐</string>
-    <string name="tags">标签墙</string>
-    <string name="tags_details">标签</string>
-
-    <string name="network_error">网络不可用</string>
-    <string name="network_error_content">网络不可用，请检查你的网络连接</string>
-    <string name="no_network_connection_toast">网络不可用</string>
-    <string name="cache_clear_completed">缓存清理成功</string>
-    <string name="clear_cache">清理缓存</string>
-    
-    <string name="menu_item_clear_memory_cache">清理内存</string>
-    <string name="menu_item_clear_disc_cache">清除缓存</string>
-    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
-    <string name="menu_item_pause_on_fling">Pause on fling</string>
+    <string name="latest">Latest</string>
+    <string name="recommend">Recommend</string>
+    <string name="tags">Tags Wall</string>
+    <string name="tags_details">Tag</string>
+    <string name="network_error">Network Unavailable</string>
+    <string name="network_error_content">Please check your network connection</string>
+    <string name="no_network_connection_toast">Network Unavailable</string>
+    <string name="cache_clear_completed">Cache clear successed.</string>
+    <string name="clear_cache">Clear Cache</string>
+    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
+    <string name="menu_item_clear_disc_cache">Clear disk cache</string>
+	<string name="menu_share">Share</string>
+	<string name="share_error">Sorry, Shareing failed.</string>
 </resources>
